--- a/config/open_jdk_jre.yml
+++ b/config/open_jdk_jre.yml
@@ -25,17 +25,17 @@ memory_calculator:
   stack_threads: 
   memory_sizes:
     heap: 
-    metaspace: 64m..
-    native: 
-    permgen: 64m..
-    stack: 
+    metaspace: 
+    native: 300m
+    permgen:
+    stack: 256k
   memory_heuristics:
-    heap: 125 
-    metaspace: 10
-    native: 10
-    permgen: 10
+    heap: 65
+    metaspace: 15
+    native: 15
+    permgen: 15
     stack: 5
   memory_initials:
-    heap: 100%
-    metaspace: 100%
-    permgen: 100%
+    heap: 50%
+    metaspace: 50%
+    permgen: 50%
